# TryOnNow

./: .gitignore  README.md  app_dev.py  environment.yml  pyproject.toml  requirements.txt
Fashion-Recommender-system/: database.sql  main.py  test.py
catvton/: api.py  demo_ui.py  inference.py
catvton/model/: pipeline.py
catvton/notebooks/: call_api.ipynb  diffusers_quantization.ipynb  inference.ipynb
catvton/preprocessor/: image_processor.py
dataScraping/: README.md  Scraping_Amazon_Product_Information_using_Beautiful_Soup.ipynb  demo.py  out.csv  test.py
dataScraping/.ipynb_checkpoints/: Scraping_Amazon_Product_Information_using_Beautiful_Soup-checkpoint.ipynb
models/: data  models
py/: recognition_module.py  ui_module.py
