[tool.poetry]
name = "catvton"
version = "0.1.0"
description = ""
authors = ["Bibek K C <bibekyess@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
matplotlib = "^3.9.2"
torch = "^2.5.1"
torchvision = "^0.20.1"
accelerate = "^1.1.1"
diffusers = "^0.31.0"
huggingface-hub = "^0.26.2"
numpy = "^1.26.4"
opencv-python = "^4.10.0.84"
pillow = "^9.1.0"
pyyaml = "^6.0.2"
setuptools = "^75.6.0"
scikit-image = "^0.24.0"
tqdm = "^4.67.0"
transformers = "^4.46.3"
fvcore = "^0.1.5.post20221221"
cloudpickle = "^3.1.0"
omegaconf = "^2.3.0"
pycocotools = "^2.0.8"
av = "^13.1.0"
scipy = "^1.13.1"
pydantic = "^2.10.1"
fastapi = "^0.115.5"
uvicorn = "^0.32.1"
gradio = "4.44.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
